# SmartBaseModel

./: Makefile  README.md  pyproject.toml  requirements.txt
core/: __init__.py  smart_base_model.py
core/model_impl/: openai_smart_base_model.py
core/py_gpt/: py_gpt.py
core/py_gpt/prompts/: py_gpt_prompts.py
core/py_gpt/python_code_interpreter/: python_code_interpreter.py
core/python_code_interpreter/: command_executor.py  python_code_interpreter.py  python_source.py  template.py
core/smart_base_model/: smart_base_model.py
llm/: large_language_model_base.py
llm/extensions/: __init__.py
llm/extensions/langchain/: langchain_tool_chain_model.py
llm/llm_impls/: ollama_large_language_model.py  openai_large_language_model.py
messaging/: behavior_subject.py
prompts/: model_prompt.py  py_gpt_prompts.py
smart_base_model/: __init__.py
smart_base_model/core/py_gpt/: py_gpt.py
smart_base_model/core/py_gpt/python_code_interpreter/: command_executor.py  python_code_interpreter.py  python_source.py
smart_base_model/core/smart_base_model/: smart_base_model.py
smart_base_model/llm/: large_language_model_base.py
smart_base_model/llm/extensions/: __init__.py
smart_base_model/llm/extensions/langchain/: langchain_tool_chain_model.py
smart_base_model/llm/llm_impls/: openai_large_language_model.py
smart_base_model/messaging/: behavior_subject.py
utils/: common_utils.py
