[project]
name = "smart_base_model"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "William Chen", email = "william_w_chen@trendmicro.com"},
]
dependencies = [
    "openai>=1.50.2",
    "pydantic>=2.9.2",
    "loguru>=0.7.2",
    "partial-json-parser>=0.2.1.1.post4",
    "langchain==0.2.2",
    "langchain-openai==0.1.8",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
version = { source = "file", path = "smart_base_model/__init__.py" }
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.8",
    "isort>=5.13.2",
]
